Github actions updated anime season data

--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -19,7 +19,7 @@
       "type": "series",
       "name": "BLUE LOCK Season 2",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx163146-f2vYhmiGn6dM.png",
-      "description": "Genres: Action, Drama, Sports\nTags:Football/Male Protagonist/Battle Royale/Super Power/Shounen/Primarily Teen Cast/Primarily Male Cast/Ensemble Cast/Surreal Comedy\nThe second season of <i> Blue Lock</i>.<br><br>\nThe hottest soccer matches start again as the U-20 Japan National Team makes their debut!<br><br>\n(Source: Crunchyroll News)"
+      "description": "Genres: Action, Drama, Sports\nTags:Football/Male Protagonist/Battle Royale/Shounen/Primarily Teen Cast/Primarily Male Cast/Ensemble Cast/Super Power/Surreal Comedy\nThe second season of <i> Blue Lock</i>.<br><br>\nThe hottest soccer matches start again as the U-20 Japan National Team makes their debut!<br><br>\n(Source: Crunchyroll News)"
     },
     {
       "id": "tt10905902",
@@ -106,13 +106,6 @@
       "description": "Genres: Adventure, Fantasy\nTags:Coming of Age/Isekai/Magic/Swordplay/Male Protagonist/Shounen\nThe second season of <i>Tensei Kizoku, Kantei Skill de Nariagaru</i>.<br><br>\nArs faces battle for the first time as Lord Couran sends their summons for war council!<br><br>(Source: Crunchyroll News)"
     },
     {
-      "id": "tt29370857",
-      "type": "series",
-      "name": "Ron Kamonohashi’s Forbidden Deductions Season 2",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx172355-D7J0LRyWZZhg.jpg",
-      "description": "Genres: Drama, Mystery\nTags:Detective/Work/Male Protagonist\nThe second season of <i>Kamonohashi Ron no Kindan Suiri</i>."
-    },
-    {
       "id": "tt32512773",
       "type": "series",
       "name": "Loner Life in Another World",
@@ -125,6 +118,13 @@
       "name": "365 Days to the Wedding",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx165790-OwIZI9ArGR4Q.jpg",
       "description": "Genres: Romance\nTags:Marriage/Office Lady/Fake Relationship/Kuudere/Heterosexual/Work/Seinen/Male Protagonist/Primarily Adult Cast/Female Protagonist/Rural\nTakuya and Rika are coworkers in a travel agency in Tokyo. They’re both single, but they don’t mind, since they’re introverts with fulfilling lives at home. Unfortunately, now their job is looking to staff an office in Siberia, and non-married employees are the first to be considered. Rika is desperate to avoid the transfer and goes to Takuya with an idea: if they pretend they’re getting married in a year, they can stay in Tokyo. The only problem is the two of them barely know each other! If these two quiet coworkers “fake” a relationship, will it turn into something real?<br><br>\n\n(Source: Seven Seas Entertainment)"
+    },
+    {
+      "id": "tt29370857",
+      "type": "series",
+      "name": "Ron Kamonohashi’s Forbidden Deductions Season 2",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx172355-D7J0LRyWZZhg.jpg",
+      "description": "Genres: Drama, Mystery\nTags:Detective/Work/Male Protagonist\nThe second season of <i>Kamonohashi Ron no Kindan Suiri</i>."
     },
     {
       "id": "tt32766897",
@@ -190,7 +190,7 @@
       "description": "Genres: Drama, Fantasy, Slice of Life, Supernatural\nTags:Youkai/Iyashikei/Male Protagonist/Rural/Shoujo\nThe seventh season of <i>Natsume Yuujinchou.<br>"
     },
     {
-      "id": "tt33323683",
+      "id": "tt32832434",
       "type": "series",
       "name": "TsumaSho",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx162785-kqAuHBdvX283.jpg",
@@ -204,18 +204,18 @@
       "description": "Genres: Action, Adventure, Drama, Romance\nTags:Samurai/Swordplay/Male Protagonist/Historical/Shounen\nThe second season of <i>Rurouni Kenshin: Meiji Kenkaku Romantan (2023)</i>. <br><br>\n\nA phantom of the Bakumatsu who must be taken down. All the answers you desire are in Kyoto!<br><br>\n\n(Source: Aniplex USA)"
     },
     {
-      "id": "tt21939220",
-      "type": "series",
-      "name": "MF GHOST Season 2",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx171642-A9JRc46pEjpe.png",
-      "description": "Genres: Sci-Fi, Sports\nTags:Cars/Seinen/Heterosexual\nThe second season of <i>MF Ghost.</i>"
-    },
-    {
       "id": "tt32178571",
       "type": "series",
       "name": "Nina the Starry Bride",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx171038-AAltS6oqShby.png",
       "description": "Genres: Drama, Fantasy, Romance\nTags:Josei/Female Protagonist/Politics/Love Triangle/Royal Affairs/Arranged Marriage/Heterosexual/Crossdressing\nNina, a girl living as an orphan in the Fortna Castle Town, happens to have eyes of the same deep blue hue as lapis lazuli—just like the God of the Stars. They’re also the same color as the eyes of the recently deceased Princess Alisha. For that reason, when the second prince of Fortna, Azure, discovers Nina, he ordains that she will live as the princess in Alisha’s place. As substitute princess and Priestess of the Stars, Nina is obligated to become the false bride of Sett, the first prince of the large neighboring nation of Galgada after the third month has passed. Despite being at the mercy of fate, Nina is just happy to feel needed by someone. What is it that her open, honest eyes see? The destinies of all the players on this stage begin to move when they make up their minds to protect the ones they love!<br>\n<br>\n(Source: Crunchyroll) "
+    },
+    {
+      "id": "tt21939220",
+      "type": "series",
+      "name": "MF GHOST Season 2",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx171642-A9JRc46pEjpe.png",
+      "description": "Genres: Sci-Fi, Sports\nTags:Cars/Seinen/Heterosexual\nThe second season of <i>MF Ghost.</i>"
     },
     {
       "id": "tt32510166",
@@ -257,7 +257,7 @@
       "type": "series",
       "name": "Kabushiki Gaisha Magi Lumiere",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx171025-3HsBogFXuG1p.jpg",
-      "description": "Genres: Action, Comedy, Fantasy, Mahou Shoujo\nTags:Magic/Urban Fantasy/Work/Primarily Adult Cast/Female Protagonist/Software Development/Shounen/Crossdressing\nKana Sakuragi is an excellent candidate for the job. Any job! She’s motivated and organized, and has a fantastic memory. So why has she interviewed at over 15 companies without receiving a single offer? She’s trying to keep a positive attitude, but it seems like her bad luck is only getting worse when a monster crashes her latest interview. As havoc ensues, she finds herself helping the magical girl who comes to their rescue and ends up with more than just her life in return. Meet the newest magical girl at Magilumiere Magical Girls Inc.!\n<br><br>\n(Source: VIZ Media)"
+      "description": "Genres: Action, Comedy, Fantasy, Mahou Shoujo\nTags:Magic/Urban Fantasy/Work/Primarily Adult Cast/Female Protagonist/Software Development/Crossdressing/Shounen\nKana Sakuragi is an excellent candidate for the job. Any job! She’s motivated and organized, and has a fantastic memory. So why has she interviewed at over 15 companies without receiving a single offer? She’s trying to keep a positive attitude, but it seems like her bad luck is only getting worse when a monster crashes her latest interview. As havoc ensues, she finds herself helping the magical girl who comes to their rescue and ends up with more than just her life in return. Meet the newest magical girl at Magilumiere Magical Girls Inc.!\n<br><br>\n(Source: VIZ Media)"
     },
     {
       "id": "tt32524882",
@@ -316,18 +316,18 @@
       "description": "Genres: Comedy, Supernatural\nTags:Youkai/School/Teacher/Male Protagonist/Urban Fantasy/Shounen/Primarily Teen Cast\nRookie teacher Haruaki Abe is as cowardly as they come. It's hard enough for him to handle human students without whimpering-and now he's going to be teaching at a school full of monsters?! It's a classroom of horrors for Haruaki, as his mischievous students use every means at their disposal to prank him! Will this poor teacher be able to get his group of ghouls under control, or is this class destined for failure?<br>\n<br>\n(Source: Yen Press)"
     },
     {
-      "id": "tt28371434",
-      "type": "series",
-      "name": "TRILLION GAME",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx169315-NtbOlSyDtSCZ.png",
-      "description": "Genres: Action, Comedy, Drama, Psychological\nTags:Economics/Seinen/Male Protagonist/Urban\nOld schoolmates Haru and Gaku will do anything to achieve success. And success to them means earning a trillion dollars! But to do so, they’ll need to take full advantage of their own unique skills. Haru is a persuasive and confident speaker who can connect with anyone, while Gaku, although awkward, is an expert programmer. Will their combined talents be enough to make their dream a reality?<br>\n<br>\n(Source: Crunchyroll)"
-    },
-    {
       "id": "tt33054366",
       "type": "series",
       "name": "Negative Positive Angler",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179919-KLuGsnqnhkPb.jpg",
       "description": "Genres: Drama\nTags:Fishing/Primarily Adult Cast\nThe anime's story centers on Tsunehiro Sasaki, a university student with a large debt and is told by his doctor that he only has two years left to live. Living the rest of his days in depression, Tsunehiro one day gets chased by a debt collector and falls into the sea. He is rescued by Hana, a girl who loves fishing, and her fishing friends including Takaaki.\n<br>\nHana urges Tsunehiro to experience fishing for the first time in his life and he starts to develop friendship with other fishing enthusiasts. Things start looking up for Tsunehiro as he starts working at the convenience store where Hana and Takaaki work, and he slowly gets hooked into fishing.\n<br><br>\n(Source: Anime News Network)"
+    },
+    {
+      "id": "tt28371434",
+      "type": "series",
+      "name": "TRILLION GAME",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx169315-NtbOlSyDtSCZ.png",
+      "description": "Genres: Action, Comedy, Drama, Psychological\nTags:Economics/Seinen/Male Protagonist/Urban\nOld schoolmates Haru and Gaku will do anything to achieve success. And success to them means earning a trillion dollars! But to do so, they’ll need to take full advantage of their own unique skills. Haru is a persuasive and confident speaker who can connect with anyone, while Gaku, although awkward, is an expert programmer. Will their combined talents be enough to make their dream a reality?<br>\n<br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt31308294",
