Github actions updated anime season data

--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -4,7 +4,7 @@
       "id": "tt5607616",
       "type": "series",
       "name": "Re:ZERO -Starting Life in Another World- Season 3",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx163134-e7ff17XOlj10.png",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx163134-Y0r8AGBeVlCi.jpg",
       "description": "Genres: Action, Adventure, Drama, Fantasy, Psychological, Romance, Thriller\nTags:Isekai/Cult/Witch/Magic/Male Protagonist/Super Power/Elf/Heterosexual/Time Loop/Ensemble Cast/Primarily Adult Cast/Female Protagonist/Maids/Tomboy\nThe third season of <i>Re:Zero kara Hajimeru Isekai Seikatsu</i>. <br><br>\n\nA year has passed since Subaru’s victory at the Sanctuary. He savors a life of fulfillment while Emilia’s camp stands united for the royal selection—until a fateful letter arrives. Anastasia, a royal selection candidate, has invited Emilia to the Watergate City of Priestella. But as the party begins its journey, crisis stirs beneath the surface and Subaru meets a cruel fate once again.<br><br>\n(Source: Crunchyroll) <br><br>\n\n<i>Notes:<br>\nThe first episode has an extended runtime of ~90 minutes, and received an early premiere at Anime Expo on July 5, 2024.</i>"
     },
     {
@@ -12,7 +12,7 @@
       "type": "series",
       "name": "DAN DA DAN",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx171018-2ldCj6QywuOa.jpg",
-      "description": "Genres: Action, Comedy, Drama, Romance, Sci-Fi, Supernatural\nTags:Urban Fantasy/Youkai/Aliens/Surreal Comedy/Male Protagonist/Female Protagonist/Heterosexual/Shounen/Cult/Nudity\nThis is a story about Momo, a high school girl who comes from a family of spirit mediums, and her classmate Okarun, an occult fanatic. After Momo rescues Okarun from being bullied, they begin talking. However, an argument ensues between them since Momo believes in ghosts but denies aliens exist, and Okarun believes in aliens but denies ghosts exist.\n<br><br>\nTo prove to each other what they believe in is real, Momo goes to an abandoned hospital where a UFO has been spotted and Okarun goes to a tunnel rumored to be haunted. To their surprise, they each encounter overwhelming paranormal activities that transcend comprehension. Amid these predicaments, Momo awakens her hidden power and Okarun gains the power of a curse to overcome these new dangers! Their fateful love begins as well!?\n<br><br>\nThe story of the occult battle and adolescence starts!<br><br>\n(Source: Crunchyroll) <br><br>\n\n<i>Notes: <br>\n- Worldwide premiere of Episode 1 before the Japanese television premiere occurred at Anime Expo July 6, 2024. <br>\n- Episodes 1-3 titled as <b>DAN DA DAN: FIRST ENCOUNTER</b> was pre-screened in advance in theaters on August 31, 2024 in Asia, September 7, 2024 in Europe and September 13, 2024 in North America. The regular TV broadcast begins October 2024.</i>"
+      "description": "Genres: Action, Comedy, Drama, Romance, Sci-Fi, Supernatural\nTags:Youkai/Urban Fantasy/Aliens/Surreal Comedy/Male Protagonist/Female Protagonist/Heterosexual/Shounen/Cult/Nudity\nThis is a story about Momo, a high school girl who comes from a family of spirit mediums, and her classmate Okarun, an occult fanatic. After Momo rescues Okarun from being bullied, they begin talking. However, an argument ensues between them since Momo believes in ghosts but denies aliens exist, and Okarun believes in aliens but denies ghosts exist.\n<br><br>\nTo prove to each other what they believe in is real, Momo goes to an abandoned hospital where a UFO has been spotted and Okarun goes to a tunnel rumored to be haunted. To their surprise, they each encounter overwhelming paranormal activities that transcend comprehension. Amid these predicaments, Momo awakens her hidden power and Okarun gains the power of a curse to overcome these new dangers! Their fateful love begins as well!?\n<br><br>\nThe story of the occult battle and adolescence starts!<br><br>\n(Source: Crunchyroll) <br><br>\n\n<i>Notes: <br>\n- Worldwide premiere of Episode 1 before the Japanese television premiere occurred at Anime Expo July 6, 2024. <br>\n- Episodes 1-3 titled as <b>DAN DA DAN: FIRST ENCOUNTER</b> was pre-screened in advance in theaters on August 31, 2024 in Asia, September 7, 2024 in Europe and September 13, 2024 in North America. The regular TV broadcast begins October 2024.</i>"
     },
     {
       "id": "tt15222080",
@@ -60,7 +60,7 @@
       "id": "tt15237152",
       "type": "series",
       "name": "Is It Wrong To Try To Pick Up Girls in a Dungeon? V",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx170732-MHqHPKJ2TbMZ.jpg",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx170732-PwCMhnnOKdBu.jpg",
       "description": "Genres: Action, Adventure, Comedy, Fantasy, Romance\nTags:Mythology/Dungeon/Female Harem/Gods/Ensemble Cast/Male Protagonist/Primarily Female Cast\nThe fifth season of <i>Dungeon ni Deai wo Motomeru no wa Machigatteiru Darou ka</i>.<br><br>\nGoddess Festival—A fruit festival that brings the labyrinth city of Orario to life. Goddesses symbolizing fertility are enshrined on the altar, and among them is the Goddess of Beauty. Bell Cranel, who has survived and returned to his daily life from the dead depths of the dungeon, is here and ready to enjoy the bustle of the Goddess Festival until he receives a letter from a girl at a small bar in a corner of Orario—\"To Mr. Bell, please go on a date with just the two of us at the upcoming Goddess Festival. From Syr.\" Syr's single-minded determination will drive both Bell and the labyrinth city crazy. Meanwhile, the Einherjar, the warriors who claim to be the \"strongest,\" are now suddenly on the move...<br><br>\n\n(Source: HIDIVE)"
     },
     {
@@ -74,7 +74,7 @@
       "id": "tt7978710",
       "type": "series",
       "name": "Sword Art Online Alternative: Gun Gale Online II",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx167141-S4L4KKmuvM9L.jpg",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx167141-m8eOYiDpeN4R.jpg",
       "description": "Genres: Action, Sci-Fi\nTags:Female Protagonist/Guns/Video Games\nThe second season of <i>Sword Art Online Alternative: Gun Gale Online</i>.\n<br><br>\nLLENN, M, Fukaziroh, and Pitohui form the strongest team, LPFM for short, and enter a new battle royale death match tournament that was annouced out of the blue.<br><br>\n\nLPFM is eyed as the top favorite candidate team to win, but the team will have to endure several rigorous ordeals to get there: a playing field that sinks into the ocean with the passage of time, an unknown area hidden in the middle of the map, and an anonymous team conspiracy.<br><br>\n\nIn addition to all of this, all players will have to follow some shocking special rules if they want to play the game and win…<br><br>\n(Source: Aniplex USA)<br><br>\n\n<i>Note: On June 17, 2024, Studio 3Hz announced their acquisition by A-1 Pictures. The GGO Project would continue to be handled by the same staff, now working under their new studio's name. </i>"
     },
     {
@@ -179,7 +179,7 @@
       "id": "tt33476001",
       "type": "series",
       "name": "Demon Lord, Retry! R",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx168500-BsAkVbYskyDq.jpg",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx168500-wwpXjBBlXDpx.jpg",
       "description": "Genres: Action, Adventure, Comedy, Fantasy\nTags:Isekai/Magic\nThe Demon Lord continues his adventure in this re-vamped series! After encountering the mysterious entity in the lowest level of the Bastille Dungeon, he sets out for Hellion Territory, where Grand Devils vie for domination of the realm. With the addition of a new advisor—the (seemingly) hopeless optimist Akane—the Demon Lord’s army grows even more colorful, and their hijinks even wackier.<br><br>\n(Source:  J-Novel Club)"
     },
     {
@@ -190,7 +190,7 @@
       "description": "Genres: Comedy, Drama, Romance, Slice of Life\nTags:Heterosexual/Seinen/Iyashikei\nThe story follows Keisuke Niijima—who lost his beloved wife, Takae, ten years ago—and their daughter, Mai. They have been in a state of despair since Takae's death. One evening, an elementary school girl visits the Niijima family claiming to be the reincarnation of Takae. At first they don’t believe her but the girl continues to give them information that only the family knows. Keisuke and Mai soon recognize her as Takae and the three begin to act together as a \"family.” <br><br>\n\n(Source: Crunchyroll News)"
     },
     {
-      "id": "tt32128285",
+      "id": "tt1352421",
       "type": "series",
       "name": "Natsume's Book of Friends Season 7",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx166611-MXGsOlPv2IKj.png",
@@ -211,18 +211,18 @@
       "description": "Genres: Action, Adventure, Comedy, Fantasy, Psychological\nTags:Male Protagonist/Magic/Seinen/Swordplay\nNoel has grown up idolizing his grandfather, a legendary adventurer of the class known as Seekers. But when it comes time for Noel to set out on his own, much to his dismay, he turns out to be a Talker: a support class with meager abilities. But Noel’s got ambition in spades–and the smarts to match–so he’s determined to do whatever it takes to make the world know his name!<br>\n<br>\n(Source: Seven Seas Entertainment)"
     },
     {
-      "id": "tt32178571",
-      "type": "series",
-      "name": "Nina the Starry Bride",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx171038-AAltS6oqShby.png",
-      "description": "Genres: Drama, Fantasy, Romance\nTags:Josei/Female Protagonist/Politics/Love Triangle/Royal Affairs/Arranged Marriage/Heterosexual/Crossdressing\nNina, a girl living as an orphan in the Fortna Castle Town, happens to have eyes of the same deep blue hue as lapis lazuli—just like the God of the Stars. They’re also the same color as the eyes of the recently deceased Princess Alisha. For that reason, when the second prince of Fortna, Azure, discovers Nina, he ordains that she will live as the princess in Alisha’s place. As substitute princess and Priestess of the Stars, Nina is obligated to become the false bride of Sett, the first prince of the large neighboring nation of Galgada after the third month has passed. Despite being at the mercy of fate, Nina is just happy to feel needed by someone. What is it that her open, honest eyes see? The destinies of all the players on this stage begin to move when they make up their minds to protect the ones they love!<br>\n<br>\n(Source: Crunchyroll) "
-    },
-    {
       "id": "tt32510166",
       "type": "series",
       "name": "Party kara Tsuihou sareta Sono Chiyushi, Jitsu wa Saikyou ni Tsuki",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx174043-aHYSmA5B76TZ.jpg",
       "description": "Genres: Action, Adventure, Fantasy\nTags:Male Protagonist/Magic\nThe story follows Raust, a healer who can only use one basic spell and is expelled from a first-class party for being too weak. While the leader of that party realizes how great his abilities actually are after hiring another healer, Raust finds new friends like Narsena who support him and his rise to the top.<br><br>\n(Source: Crunchyroll News)"
+    },
+    {
+      "id": "tt32178571",
+      "type": "series",
+      "name": "Nina the Starry Bride",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx171038-lSjQqiSk1mQC.jpg",
+      "description": "Genres: Drama, Fantasy, Romance\nTags:Josei/Female Protagonist/Politics/Love Triangle/Royal Affairs/Arranged Marriage/Heterosexual/Crossdressing\nNina, a girl living as an orphan in the Fortna Castle Town, happens to have eyes of the same deep blue hue as lapis lazuli—just like the God of the Stars. They’re also the same color as the eyes of the recently deceased Princess Alisha. For that reason, when the second prince of Fortna, Azure, discovers Nina, he ordains that she will live as the princess in Alisha’s place. As substitute princess and Priestess of the Stars, Nina is obligated to become the false bride of Sett, the first prince of the large neighboring nation of Galgada after the third month has passed. Despite being at the mercy of fate, Nina is just happy to feel needed by someone. What is it that her open, honest eyes see? The destinies of all the players on this stage begin to move when they make up their minds to protect the ones they love!<br>\n<br>\n(Source: Crunchyroll) "
     },
     {
       "id": "tt32832435",
@@ -253,11 +253,11 @@
       "description": "Genres: Fantasy, Romance\nTags:Heterosexual/Dragons\nJill breaks out of prison the night before she’s set to be executed by her fiancé, Crown Prince Gerald. She’s struck by an arrow while escaping, but instead of dying, she’s transported six years into the past—to the night she and Gerald met. Desperate to alter fate, she instead proposes to the first man she sees, Hadis Teos Rave, her enemy in the future. This is her last chance to get it right!<br>\n<br>\n(Source: Crunchyroll)"
     },
     {
-      "id": "tt13840232",
+      "id": "tt32508529",
       "type": "series",
-      "name": "Love Live! Superstar!! 3rd Season",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx155502-PYqyrtywELYr.jpg",
-      "description": "Genres: Music, Slice of Life\nTags:Idol/Dancing/Cute Girls Doing Cute Things/School Club/Female Protagonist/Primarily Female Cast\nThe third season of <i>Love Live! Superstar!!</i>"
+      "name": "Let This Grieving Soul Retire",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx175019-8lLRmHID5fMd.jpg",
+      "description": "Genres: Action, Comedy, Fantasy\nTags:\nIt's the golden age for treasure hunters—adventurers hungry for wealth, fame, power, and glory, who risk their lives in treasure vaults throughout the world.\n<br><br>\n<i>“Let's become treasure hunters.”</i>\n<br><br>\nKrai and his childhood friends swore to become the greatest of them all, but that dream should have died the day Krai realized he wasn't cut out for the job! Yet expectations continue to mount, right along with Krai's fear for his life. While his childhood friends climb closer toward their dream, this grieving soul has one simple wish: to pack it all in and retire!\n<br><br>\n(Source: J-Novel Club)"
     },
     {
       "id": "tt30476504",
@@ -267,11 +267,11 @@
       "description": "Genres: Action, Comedy, Fantasy, Mahou Shoujo\nTags:Magic/Urban Fantasy/Work/Primarily Adult Cast/Female Protagonist/Software Development/Crossdressing/Shounen\nKana Sakuragi is an excellent candidate for the job. Any job! She’s motivated and organized, and has a fantastic memory. So why has she interviewed at over 15 companies without receiving a single offer? She’s trying to keep a positive attitude, but it seems like her bad luck is only getting worse when a monster crashes her latest interview. As havoc ensues, she finds herself helping the magical girl who comes to their rescue and ends up with more than just her life in return. Meet the newest magical girl at Magilumiere Magical Girls Inc.!\n<br><br>\n(Source: VIZ Media)"
     },
     {
-      "id": "tt32508529",
+      "id": "tt13840232",
       "type": "series",
-      "name": "Let This Grieving Soul Retire",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx175019-8lLRmHID5fMd.jpg",
-      "description": "Genres: Action, Comedy, Fantasy\nTags:\nIt's the golden age for treasure hunters—adventurers hungry for wealth, fame, power, and glory, who risk their lives in treasure vaults throughout the world.\n<br><br>\n<i>“Let's become treasure hunters.”</i>\n<br><br>\nKrai and his childhood friends swore to become the greatest of them all, but that dream should have died the day Krai realized he wasn't cut out for the job! Yet expectations continue to mount, right along with Krai's fear for his life. While his childhood friends climb closer toward their dream, this grieving soul has one simple wish: to pack it all in and retire!\n<br><br>\n(Source: J-Novel Club)"
+      "name": "Love Live! Superstar!! 3rd Season",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx155502-PYqyrtywELYr.jpg",
+      "description": "Genres: Music, Slice of Life\nTags:Idol/Dancing/Cute Girls Doing Cute Things/School Club/Female Protagonist/Primarily Female Cast\nThe third season of <i>Love Live! Superstar!!</i>"
     },
     {
       "id": "tt20228550",
@@ -291,14 +291,14 @@
       "id": "tt32832421",
       "type": "series",
       "name": "How I Attended an All-Guy's Mixer",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx169931-GjVPtlTyLzEG.jpg",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx169931-tPgDEKaHNkFr.jpg",
       "description": "Genres: Comedy, Romance\nTags:Crossdressing/Tomboy/Primarily Adult Cast/Shoujo/College/Heterosexual/Bisexual\nCollege student Tokiwa gets invited to a mixer by his female classmate Suo. But when he arrives with his friends, they're greeted by three dazzlingly handsome men?! But as the two groups get to know each other, they find themselves getting closer in unexpected ways.<br><br>\n(Source: MANGA UP!)"
     },
     {
       "id": "tt32863895",
       "type": "series",
       "name": "The Stories of Girls Who Couldn't Be Magicians",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx107372-eIZsTjZo3c4w.jpg",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx107372-jRO0pY1kIRLl.jpg",
       "description": "Genres: Fantasy\nTags:School/Magic/Ojou-sama/Female Protagonist\n\nKurumi Mirai is in the first year of high school. <br><br>\n\nShe has enrolled in junior high section of the Redrun Magic School, the world's only facility for mages that approved by International Mage League and able to work under royal families when graduates, and she was always top of the class. However, when she applies for the high school section and took the examination to get into a mage training class \"Ma-gumi (Mage Class)\", she wasn't able to get in in spite having full scores and was top of the class for the whole three years. <br><br>\n\nThere are some students in the class next to her that takes that class. Among that there's someone she admires. How will Kurumi Mirai who has extraordinary brain but didn't get in to be a mage candidate try to overcome and grow up? What is the aim for Minami Suzuki, a loyal mage who suddenly appears to be the homeroom teacher? This is a relaxing story of her growth.\n<br><br>\n(Source: MAL News)"
     },
     {
@@ -326,7 +326,7 @@
       "id": "tt32832431",
       "type": "series",
       "name": "Youkai Gakkou no Sensei Hajimemashita!",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx171545-KGC19S6J4zm2.jpg",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx171545-j9foxkHeXec7.jpg",
       "description": "Genres: Comedy, Supernatural\nTags:Youkai/School/Teacher/Male Protagonist/Urban Fantasy/Shounen/Primarily Teen Cast\nRookie teacher Haruaki Abe is as cowardly as they come. It's hard enough for him to handle human students without whimpering-and now he's going to be teaching at a school full of monsters?! It's a classroom of horrors for Haruaki, as his mischievous students use every means at their disposal to prank him! Will this poor teacher be able to get his group of ghouls under control, or is this class destined for failure?<br>\n<br>\n(Source: Yen Press)"
     },
     {
